--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -2,6 +2,202 @@
     /* margin: 0; */
     box-sizing: border-box;
     /* font-family: "CustomFont"; */
+    background-image: "background1.jpg";
+  }
+
+
+
+ 
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   /* background-image: "background1.jpg";*/
+
+   
+  }
+  html {
+    font-size: 62.5%;
+    /*background-image: "background1.jpg";*/
+
+  }
+  
+  body {
+    background-image: "background1.jpg";
+    font-family: "Poppins", sans-serif;
+    line-height: 1.6;
+    color: #1a1a1a;
+    font-size: 16px;
+    overflow-x: hidden;
+    
+  }
+
+  a {
+    color: #2196f3;
+    text-decoration: none;
+  }
+  .container {
+    display: grid;
+    grid-template-rows: minmax(min-content, 100vh);
+    grid-template-columns: repeat(2, 50vw);
+  }
+  .custom-dot {
+    color: #2196f3;
+  }
+  .signup-container,
+  .signup-form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .signup-container {
+    width: 100vw;
+    padding: 10rem 10rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    grid-column: 1 / 2;
+    grid-row: 1;
+  }
+  .signup-form {
+    max-width: 45rem;
+    width: 100%;
+  }
+  .text-mute {
+    color: #aaa;
+  }
+  .heading-primary {
+    font-size: 5rem;
+    text-align:center;
+  }
+  .input-text:focus {
+    outline-color: #2196f3;
+  }
+  
+  .btn {
+    padding: 2rem 3rem;
+    border: none;
+    background: #2196f3;
+    color: #fff;
+    border-radius: 1rem;
+    cursor: pointer;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: inherit;
+  }
+  .btn-signup {
+    align-self: flex-end;
+    width: 100%;
+    margin-top: 2rem;
+    box-shadow: 0 1rem 2rem #00000025;
+  }
+  .btn-signup:active {
+    box-shadow: none;
+  }
+  .btn-signup:hover {
+    background: #2180f9;
+  }
+  .inp {
+    position: relative;
+  }
+  .label {
+    pointer-events: none;
+    position: absolute;
+    top: 0rem;
+    left: 2rem;
+    color: #00000070;
+    font-weight: 500;
+    font-size: 1.8rem;
+  
+    transition: all 0.2s;
+    transform-origin: left;
+  }
+  .input-text:not(:placeholder-shown) + .label,
+  .input-text:focus + .label {
+    top: 0.7rem;
+    transform: scale(0.75);
+  }
+  .input-text:focus + .label {
+    color: #2196f3;
+  }
+  .f-row {
+    display: flex;
+    gap: 2rem;
+  }
+  .input-icon {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    font-size: 2rem;
+    color: #00000070;
+  }
+  .input-icon-password {
+    cursor: pointer;
+  }
+  
+  .container {
+    display: flex;
+  }
+  .heading-secondary {
+    font-size: 3rem;
+  }
+  
+  .welcome-container {
+    background: #eeeeee75;
+    background-image:url('https://media.discordapp.net/attachments/1072237976047845517/1077666951586926653/17973908.jpg?width=979&height=559');
+
+    background-size:cover;
+    background-position: center;
+    grid-column: 2 / 3;
+    grid-row: 1;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: flex-start;
+    padding: 10em;
+    margin: 0;
+  }
+  .lg {
+    font-size: 6rem;
+  }
+  
+  
+  @media only screen and (max-width: 70rem) {
+    html {
+      font-size: 54.5%;
+    }
+  }
+  
+  @media only screen and (max-width: 60rem) {
+    .signup-container {
+      padding: 5rem;
+    }
+  }
+  @media only screen and (max-width: 40rem) {
+    html {
+      font-size: 48.5%;
+    }
+  
+    .input-text:not(:placeholder-shown) + .label,
+    .input-text:focus + .label {
+      top: 0.6rem;
+      transform: scale(0.75);
+    }
+    .label {
+      font-size: 1.9rem;
+    }
+    .input-wrapper {
+      flex-direction: column;
+    }
+  }
+  
+  @media only screen and (max-width: 1200px) {
+    .signup-container {
+      grid-column: 1 / 3;
+    }
+    .welcome-container {
+      display: none;
+    }
   }
   
   .signup-form {
@@ -23,22 +219,22 @@
       font-family: 'Roboto', sans-serif;
       font-size: 16px;
       color: #333;
-      margin-bottom: 5px;
-      margin-top: 10px;
+      margin-bottom: 2px;
+      margin-top: 2px;
       align-self: flex-start;
       font-weight: bold;
     }
     
     .signup-input {
-      width: 100%;
-      height: 40px;
-      padding: 0px;
       font-family: 'Roboto', sans-serif;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: rgb(229, 226, 226);
-      margin: 0px;
+      border: black;
+    font-size: 1.8rem;
+    padding: 3rem 5rem 1rem 2rem;
+    border: none;
+    border-radius: 2rem;
+    background: #eee;
+    font-weight: 600;
+    width: 100%;
     }
   
     .signup-input:focus{
