--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i');
 
 /*Reset*/
 html, body{
@@ -17,7 +16,7 @@ background-image: url("https://image.ibb.co/de6JzG/bitmap_1_1.png");
 
 /* colors 8a3aff, 6f79ff, 3a9fff black-> 1f4568  grey->8198ae*/
 .sect{
-  padding: 90px 0;
+  padding: 90px 90px;
   position: relative;
 }
 
@@ -100,7 +99,7 @@ background-image: url("https://image.ibb.co/de6JzG/bitmap_1_1.png");
 
 
 
-.price-box--purple .price-box__img{
+/*.price-box--purple .price-box__img{
   background-image: url("https://image.ibb.co/iGjEKG/1.png");
 
 }
@@ -114,7 +113,7 @@ background-image: url("https://image.ibb.co/de6JzG/bitmap_1_1.png");
 .price-box--blue .price-box__img{
   background-image: url("https://preview.ibb.co/nDRpmw/3.png");
 
-}
+}*/
 
 .price-box__title{
   font-size:22px;
@@ -825,6 +824,9 @@ vertical-align: middle;
 }
 
 @media screen and (max-width:767px){
+  .sect{
+    padding: 30px 30px;
+  }
   .footer {
     padding: 25px 0;
   }
@@ -867,10 +869,17 @@ vertical-align: middle;
     margin-bottom: 10px;
   }
 }
-
+@media screen and (max-width:320px){
+  .sect{
+    padding: 50px 50px;
+  }
+}
 
 
 @media screen and (max-width:480px){
+  .sect{
+    padding: 50px 50px;
+  }
   .price-box {
     padding: 0px 20px;
   }
