--- a/src/pages/UserDetail/UserDetail.css
+++ b/src/pages/UserDetail/UserDetail.css
@@ -1,229 +1,169 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
-body {
-  background-color: #e6e6e6;
-  font-size: 11px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  width: 100%;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   
 }
 
-div, textarea, input {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+.i{
+  width: 90px;
 }
 
 .container {
-  max-width: 800px;
-  min-width: 324px;
-  margin: 50px auto 0;
-  background-color: white;
-  border: 1px solid #cfcfcf;
-  border-bottom: 3px solid #cccccc;
-  padding: 10px;
+  display: block;
+  justify-content: center;
 }
 
-.row {
+.custom-dot {
+  color: #2196f3;
+}
+.signup-container,
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.signup-container {
+  width: 60vw;
+  padding: 10rem 10rem;
+  align-items: flex-start;
+  justify-content: center;
+}
+.signup-form {
+  max-width: 60rem;
   width: 100%;
-  margin: 0 0 1em 0;
-  padding: 0 2.5em;
 }
-.row.header {
-  padding: 1.5em 2.5em;
-  border-bottom: 1px solid #cccccc;
-  background-color: #4F55C4;
-  
-  color: white;
-  width: auto;
-  margin-bottom: 0px;
-
+.text-mute {
+  color: #aaa;
 }
-
-
-img{
-    width: 90px;
-    height: 90px;
-    margin-left: 40px;
+.heading-primary {
+  font-size: 5rem;
 }
-.row.body {
-  padding: .5em 2.5em 1em;
+.input-text {
+  font-family: inherit;
+  font-size: 1.8rem;
+  padding: 3rem 5rem 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  background: #eee;
+  font-weight: 600;
+  width: 100%;
 }
-
-.pull-right {
-  float: right;
-  margin-right: 7px;
-}
-
-.pull-center {
-    float: right;
-  
-  left: 65px;
-}
-
-h1 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  display: inline-block;
-  font-weight: 100;
-  font-size: 2.8125em;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  margin: 0 0 0.1em 0;
-  padding: 0 0 0.4em 0;
-  
-}
-
-h3 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 1.25em;
-  margin: 1em 0 0.4em 0;
+.input-text:focus {
+  outline-color: #2196f3;
 }
 
 .btn {
-  font-size: 1.0625em;
-  display: inline-block;
-  padding: 0.74em 1.5em;
-  margin: 1.5em 0 0;
-  color: white;
-  border-width: 0 0 0 0;
-  border-bottom: 5px solid;
-  text-transform: uppercase;
-  background-color: #b3b3b3;
-  border-bottom-color: #8c8c8c;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
+  padding: 2rem 3rem;
+  border: none;
+  background: #2196f3;
+  color: #fff;
+  border-radius: 1rem;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: inherit;
 }
-
-.btn:hover {
-  background-color: #bfbfbf;
-}
-.btn.btn-submit {
-  background-color: #4F55C4;
-  border-bottom-color: #4F55C4;
-    margin-left: 120px;
-    margin-right: auto;
-
-}
-.btn.btn-submit:hover {
-  background-color: #5f7db6;
-}
-
-form {
-  max-width: 100%;
-  display: block;
-}
-form ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-form ul li {
-  margin: 0 0 0.25em 0;
-  clear: both;
-  display: inline-block;
+.btn-signup {
+  align-self: flex-end;
   width: 100%;
+  margin-top: 2rem;
+  box-shadow: 0 1rem 2rem #00000025;
 }
-form ul li:last-child {
-  margin: 0;
+.btn-signup:active {
+  box-shadow: none;
 }
-form ul li p {
-  margin: 0;
-  padding: 0;
-  float: left;
+.btn-signup:hover {
+  background: #2180f9;
 }
-form ul li p.right {
-  float: right;
+.inp {
+  position: relative;
 }
-form ul li .divider {
-  margin: 0.5em 0 0.5em 0;
-  border: 0;
-  height: 1px;
+.label {
+  pointer-events: none;
+
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  color: #00000070;
+  font-weight: 500;
+  font-size: 1.8rem;
+
+  transition: all 0.2s;
+  transform-origin: left;
+}
+.input-text:not(:placeholder-shown) + .label,
+.input-text:focus + .label {
+  top: 0.7rem;
+  transform: scale(0.75);
+}
+.input-text:focus + .label {
+  color: #2196f3;
+}
+.f-row {
+  display: flex;
+  gap: 2rem;
+}
+.input-icon {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  font-size: 2rem;
+  color: #00000070;
+}
+.input-icon-password {
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+}
+.heading-secondary {
+  font-size: 3rem;
+}
+
+
+.lg {
+  font-size: 6rem;
+}
+.welcome-container img {
   width: 100%;
-  display: block;
-  background-color: #4f6fad;
-  background-image: linear-gradient(to right, #ee9cb4, #4f6fad);
-}
-form ul li .req {
-  color: #ee9cb4;
-}
-form label {
-  display: block;
-  margin: 0 0 0.5em 0;
-  color: #4f6fad;
-  font-size: 1em;
-}
-form .error {
-  color: #ee9cb4;
-}
-form input {
-  margin: 0 0 0.5em 0;
-  border: 1px solid #cccccc;
-  padding: 6px 10px;
-  color: #555555;
-  font-size: 1em;
-}
-form textarea {
-  border: 1px solid #cccccc;
-  padding: 6px 10px;
-  width: 100%;
-  color: #555555;
-}
-form small {
-  color: #4f6fad;
-  margin: 0 0 0 0.5em;
-}
-
-@media only screen and (max-width: 480px) {
-  .pull-right {
-    float: none;
-  }
-
-  .pull-center{
-    float: none;
-  }
-  .row.header{
-    display: none;
-  }
-  input {
-    width: 100%;
-  }
-
-  label {
-    width: 100%;
-    display: inline-block;
-    float: left;
-    clear: both;
-  }
-
-  li, p {
-    width: 100%;
-  }
-
-  input.btn {
-    margin: 1.5em 0 0.5em;
-  }
-
-  h1 {
-    display: none;
-    font-size: 2.25em;
-  }
-
-  h3 {
-    display: none;
-    font-size: 1.125em;
-  }
-
-  li small {
-    display: none;
-  }
 }
 
 @media only screen and (max-width: 70rem) {
-    html {
-      font-size: 54.5%;
-    }
+  html {
+    font-size: 54.5%;
   }
-  
-  
+}
+
+@media only screen and (max-width: 60rem) {
+  .signup-container {
+    padding: 5rem;
+  }
+}
+@media only screen and (max-width: 40rem) {
+  html {
+    font-size: 48.5%;
+  }
+
+  .input-text:not(:placeholder-shown) + .label,
+  .input-text:focus + .label {
+    top: 0.6rem;
+    transform: scale(0.75);
+  }
+  .label {
+    font-size: 1.9rem;
+  }
+  .input-wrapper {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .signup-container {
+    grid-column: 1 / 3;
+  }
+  .welcome-container {
+    display: none;
+  }
+}
