--- a/src/pages/Payment/Payment.css
+++ b/src/pages/Payment/Payment.css
@@ -10,12 +10,12 @@
   color: blue !important;
 }
 .cardetails-expiry-input {
-  background-color: black;
+  background-color: rgb(203, 189, 189);
   color: white;
   text-align: center;
 }
 .cardetails-payment {
-  background: #3a3939;
+  background: #3579df;
   max-width: 360px;
   margin: 80px auto;
   height: auto;
@@ -47,7 +47,7 @@
   outline: none;
   font-size: 16px;
   color: white;
-  background-color: black;
+  background-color: rgb(212, 199, 199);
   text-align: center;
 }
 
@@ -80,7 +80,7 @@
 
 .cardetails-btn {
   margin-top: 40px;
-  background: black;
+  background: rgb(62, 80, 109);
   padding: 12px;
   text-align: center;
   color: white;
@@ -97,7 +97,7 @@
   height: 100px;
   background: #f8f8f8;
   border-radius: 50%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgba(15, 119, 189, 0.2);
   text-align: center;
   line-height: 85px;
 }
@@ -214,6 +214,6 @@
   text-align: center;
   border-radius: 3px;
   border: 1px solid #1a1b21;
-  background-color: #1a1b21;
+  background-color: #2c356d;
   color: #aaa;
 }
