--- a/src/pages/PreArrival/PreArrival.css
+++ b/src/pages/PreArrival/PreArrival.css
@@ -15,7 +15,7 @@ html {
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(0,0,0,.5);
+    background: rgba(240, 235, 235, 0.834);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
@@ -24,8 +24,9 @@ html {
   .login-box h2 {
     margin: 0 0 30px;
     padding: 0;
-    color: #fff;
+    color: #1b1818;
     text-align: center;
+    font-size: large;
   }
   
   .login-box .user-box {
@@ -36,7 +37,7 @@ html {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #242020;
     margin-bottom: 30px;
     border: none;
     border-bottom: 1px solid #fff;
@@ -58,8 +59,8 @@ html {
   .login-box .user-box input:valid ~ label {
     top: -20px;
     left: 0;
-    color: #03e9f4;
-    font-size: 12px;
+    color: #1a53bd;
+    font-size: 15px;
   }
   
   .login-box form a {
@@ -73,17 +74,15 @@ html {
     overflow: hidden;
     transition: .5s;
     margin-top: 40px;
+    text-align: center;
     letter-spacing: 4px
   }
   
   .login-box a:hover {
-    background: #03e9f4;
+    background: #49c5cb;
     color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
+   
   }
   
   .login-box a span {
