--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,7 +16,7 @@ section {
 }
 
 .footer-distributed{
-	background: #a5a2a2;
+	background: #f8b556;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -108,12 +108,13 @@ section {
 .footer-distributed .footer-center p span{
 	display:block;
 	font-weight: normal;
-	font-size:14px;
+	font-size:20px;
 	line-height:2;
 }
 
 .footer-distributed .footer-center p a{
-	color:  rgb(18, 78, 122);
+	color:  rgb(3, 13, 21);
+	font-size: 20px;
 	text-decoration: none;;
 }
 
@@ -139,8 +140,8 @@ section {
 
 .footer-distributed .footer-company-about{
 	line-height: 20px;
-	color:  #1e6aac;
-	font-size: 13px;
+	color:  #102537;
+	font-size: 16px;
 	font-weight: normal;
 	margin: 0;
 }
@@ -148,7 +149,7 @@ section {
 .footer-distributed .footer-company-about span{
 	display: block;
 	color:  #ffffff;
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: bold;
 	margin-bottom: 20px;
 }
