Colour updated for homepage and footer

--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -24,7 +24,8 @@ body{
   } */
   
   .sect--violet{
-    background-color:#3a9fff;
+    background-color:#1163d657;
+    margin-bottom: 10px;
   }
   
   .sect--padding-bottom{
