--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,7 +16,7 @@ section {
 }
 
 .footer-distributed{
-	background: #f8b556;
+	background: #8ecae6;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
