--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -51,8 +51,9 @@ a {
   gap: 2rem;
 }
 .login-container {
-  width: 100vw;
-  padding: 10rem 10rem;
+  width: 70vw;
+  font-size: 25px;
+  padding: 10rem 15rem;
   align-items: flex-start;
   justify-content: flex-start;
   grid-column: 1 / 2;
@@ -229,12 +230,16 @@ a {
     font-family: 'Roboto', sans-serif;
     border: black;
   font-size: 1.8rem;
-  padding: 3rem 5rem 1rem 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  /* padding: 3rem 5rem 1rem 2rem; */
   border: none;
-  border-radius: 2rem;
-  background: #eee;
+  border-radius: 1rem;
+  background: #6ea5d52c;
   font-weight: 600;
   width: 100%;
+  height: 55px;
   }
 
   .login-input:focus{
@@ -257,11 +262,11 @@ a {
 
     .login-button {
       width: 100%;
-      height: 40px;
+      height: 50px;
       margin-top: 20px;
-      background: linear-gradient(to bottom, #0077cc, #005daa);
+      background: linear-gradient(to bottom, #3b97d9, #558dba);
       border: 0;
-      border-radius: 5px;
+      border-radius: 15px;
       color: white;
       font-family: 'Roboto', sans-serif;
       font-size: 16px;
