--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,12 +1,9 @@
 html {
   font-size: 60%;
   /*background-image: "background1.jpg";*/
-
 }
 
 body {
-  background-image: "background1.jpg";
-  font-family: "Poppins", sans-serif;
   line-height: 1.6;
   color: #1a1a1a;
   font-size: 16px;
@@ -34,11 +31,11 @@ a {
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.1rem;
 }
 .login-container {
   width: 100vw;
-  padding: 10rem 10rem;
+  padding: 5rem 5rem;
   align-items: flex-start;
   justify-content: flex-start;
   grid-column: 1 / 2;
@@ -51,9 +48,10 @@ a {
 .text-mute {
   color: #aaa;
 }
-.heading-primary {
-  font-size: 5rem;
-  text-align:center;
+.heading-login {
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
 }
 .input-text:focus {
   outline-color: #2196f3;
@@ -129,9 +127,9 @@ a {
 
 .welcome-container {
   background: #eeeeee75;
-  background-image:url('https://media.discordapp.net/attachments/1072237976047845517/1077666951586926653/17973908.jpg?width=979&height=559');
+  background-image: url("https://media.discordapp.net/attachments/1072237976047845517/1077666951586926653/17973908.jpg?width=979&height=559");
 
-  background-size:cover;
+  background-size: cover;
   background-position: center;
   grid-column: 2 / 3;
   grid-row: 1;
@@ -144,7 +142,6 @@ a {
 .lg {
   font-size: 6rem;
 }
-
 
 @media only screen and (max-width: 70rem) {
   html {
@@ -185,79 +182,79 @@ a {
 }
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    max-width: 400px;
-    margin: 50px auto;
-    border: 1px solid #ccc;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-    border-radius: 5px;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
-  .login-label {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 2px;
-    margin-top: 2px;
-    align-self: flex-start;
-    font-weight: bold;
-  }
-  
-  .login-input {
-    font-family: 'Roboto', sans-serif;
-    border: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  max-width: 400px;
+  margin: 50px auto;
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0.188em 1.55em rgb(156, 156, 156);
+  border-radius: 5px;
+  padding: 20px;
+  box-sizing: border-box;
+  gap: 0.1rem;
+}
+
+.login-label {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  align-self: flex-start;
+  font-weight: bold;
+}
+
+.login-input {
+  border: black;
   font-size: 1.8rem;
-  padding: 3rem 5rem 1rem 2rem;
+  padding: 1rem;
   border: none;
-  border-radius: 2rem;
+  border-radius: 20px;
   background: #eee;
   font-weight: 600;
   width: 100%;
+}
+
+.login-input:focus {
+  outline-color: rgb(32, 177, 255);
+}
+
+.login-input.error {
+  background-color: #ffcccc;
+  border: 1px solid #cc0000;
+}
+
+.login-error {
+  font-size: 14px;
+  font-weight: bold;
+  color: #cc0000;
+  margin-top: 5px;
+  align-self: flex-start;
+}
+
+.login-button {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  background: linear-gradient(to bottom, #0077cc, #005daa);
+  border: 0;
+  border-radius: 20px;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  background: linear-gradient(to bottom, #005daa, #004a80);
+}
+
+@media (max-width: 600px) {
+  .login-form {
+    width: 90%;
   }
-
-  .login-input:focus{
-    outline-color: rgb(32, 177, 255);
-  }
-
-  .login-input.error {
-    background-color: #ffcccc;
-    border: 1px solid #cc0000;
-    }
-
-    .login-error {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    color: #cc0000;
-    margin-top: 5px;
-    align-self: flex-start;    
-    }
-
-    .login-button {
-      width: 100%;
-      height: 40px;
-      margin-top: 20px;
-      background: linear-gradient(to bottom, #0077cc, #005daa);
-      border: 0;
-      border-radius: 5px;
-      color: white;
-      font-family: 'Roboto', sans-serif;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .login-button:hover {
-    background: linear-gradient(to bottom, #005daa, #004a80);
-    }
-
-    @media (max-width: 600px) {
-    .login-form {
-        width: 90%;
-    }
 }
