--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,251 +1,247 @@
-  body {
-    background-image: "background1.jpg";
-    line-height: 1.6;
-    color: #1a1a1a;
-    font-size: 16px;
-    overflow-x: hidden;
-    
+body {
+  line-height: 1.6;
+  color: #1a1a1a;
+  font-size: 16px;
+  overflow-x: hidden;
+}
+
+a {
+  color: #2196f3;
+  text-decoration: none;
+}
+.container {
+  display: grid;
+  grid-template-rows: minmax(min-content, 100vh);
+  grid-template-columns: repeat(2, 50vw);
+}
+.custom-dot {
+  color: #2196f3;
+}
+.signup-container,
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+}
+.signup-container {
+  width: 100vw;
+  padding: 5rem 5rem;
+  align-items: flex-start;
+  justify-content: flex-start;
+  grid-column: 1 / 2;
+  grid-row: 1;
+}
+.signup-form {
+  max-width: 45rem;
+  width: 100%;
+}
+.text-mute {
+  color: #aaa;
+}
+.heading-signup {
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+}
+.input-text:focus {
+  outline-color: #2196f3;
+}
+
+.btn {
+  padding: 2rem 3rem;
+  border: none;
+  background: #2196f3;
+  color: #fff;
+  border-radius: 1rem;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: inherit;
+}
+.btn-signup {
+  align-self: flex-end;
+  width: 100%;
+  margin-top: 2rem;
+  box-shadow: 0 1rem 2rem #00000025;
+}
+.btn-signup:active {
+  box-shadow: none;
+}
+.btn-signup:hover {
+  background: #2180f9;
+}
+.inp {
+  position: relative;
+}
+.label {
+  pointer-events: none;
+  position: absolute;
+  top: 0rem;
+  left: 2rem;
+  color: #00000070;
+  font-weight: 500;
+  font-size: 1.8rem;
+
+  transition: all 0.2s;
+  transform-origin: left;
+}
+.input-text:not(:placeholder-shown) + .label,
+.input-text:focus + .label {
+  top: 0.7rem;
+  transform: scale(0.75);
+}
+.input-text:focus + .label {
+  color: #2196f3;
+}
+.f-row {
+  display: flex;
+  gap: 2rem;
+}
+.input-icon {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  font-size: 2rem;
+  color: #00000070;
+}
+.input-icon-password {
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+}
+
+.welcome-container {
+  background: #eeeeee75;
+  background-image: url("https://media.discordapp.net/attachments/1072237976047845517/1077666951586926653/17973908.jpg?width=979&height=559");
+
+  background-size: cover;
+  background-position: center;
+  grid-column: 2 / 3;
+  grid-row: 1;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: flex-start;
+  padding: 10em;
+  margin: 0;
+}
+.lg {
+  font-size: 6rem;
+}
+
+@media only screen and (max-width: 70rem) {
+  html {
+    font-size: 54.5%;
+  }
+}
+
+@media only screen and (max-width: 60rem) {
+  .signup-container {
+    padding: 5rem;
+  }
+}
+@media only screen and (max-width: 40rem) {
+  html {
+    font-size: 48.5%;
   }
 
-  a {
-    color: #2196f3;
-    text-decoration: none;
-  }
-  .container {
-    display: grid;
-    grid-template-rows: minmax(min-content, 100vh);
-    grid-template-columns: repeat(2, 50vw);
-  }
-  .custom-dot {
-    color: #2196f3;
-  }
-  .signup-container,
-  .signup-form {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-  .signup-container {
-    width: 100vw;
-    padding: 10rem 10rem;
-    align-items: flex-start;
-    justify-content: flex-start;
-    grid-column: 1 / 2;
-    grid-row: 1;
-  }
-  .signup-form {
-    max-width: 45rem;
-    width: 100%;
-  }
-  .text-mute {
-    color: #aaa;
-  }
-  .heading-primary {
-    font-size: 5rem;
-    text-align:center;
-  }
-  .input-text:focus {
-    outline-color: #2196f3;
-  }
-  
-  .btn {
-    padding: 2rem 3rem;
-    border: none;
-    background: #2196f3;
-    color: #fff;
-    border-radius: 1rem;
-    cursor: pointer;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: inherit;
-  }
-  .btn-signup {
-    align-self: flex-end;
-    width: 100%;
-    margin-top: 2rem;
-    box-shadow: 0 1rem 2rem #00000025;
-  }
-  .btn-signup:active {
-    box-shadow: none;
-  }
-  .btn-signup:hover {
-    background: #2180f9;
-  }
-  .inp {
-    position: relative;
-  }
-  .label {
-    pointer-events: none;
-    position: absolute;
-    top: 0rem;
-    left: 2rem;
-    color: #00000070;
-    font-weight: 500;
-    font-size: 1.8rem;
-  
-    transition: all 0.2s;
-    transform-origin: left;
-  }
   .input-text:not(:placeholder-shown) + .label,
   .input-text:focus + .label {
-    top: 0.7rem;
+    top: 0.6rem;
     transform: scale(0.75);
   }
-  .input-text:focus + .label {
-    color: #2196f3;
+  .label {
+    font-size: 1.9rem;
   }
-  .f-row {
-    display: flex;
-    gap: 2rem;
-  }
-  .input-icon {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-    font-size: 2rem;
-    color: #00000070;
-  }
-  .input-icon-password {
-    cursor: pointer;
-  }
-  
-  .container {
-    display: flex;
-  }
-  .heading-secondary {
-    font-size: 3rem;
-  }
-  
-  .welcome-container {
-    background: #eeeeee75;
-    background-image:url('https://media.discordapp.net/attachments/1072237976047845517/1077666951586926653/17973908.jpg?width=979&height=559');
-
-    background-size:cover;
-    background-position: center;
-    grid-column: 2 / 3;
-    grid-row: 1;
-    background-size: cover;
-    display: flex;
+  .input-wrapper {
     flex-direction: column;
-    justify-content: top;
-    align-items: flex-start;
-    padding: 10em;
-    margin: 0;
   }
-  .lg {
-    font-size: 6rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .signup-container {
+    grid-column: 1 / 3;
   }
-  
-  
-  @media only screen and (max-width: 70rem) {
-    html {
-      font-size: 54.5%;
-    }
+  .welcome-container {
+    display: none;
   }
-  
-  @media only screen and (max-width: 60rem) {
-    .signup-container {
-      padding: 5rem;
-    }
-  }
-  @media only screen and (max-width: 40rem) {
-    html {
-      font-size: 48.5%;
-    }
-  
-    .input-text:not(:placeholder-shown) + .label,
-    .input-text:focus + .label {
-      top: 0.6rem;
-      transform: scale(0.75);
-    }
-    .label {
-      font-size: 1.9rem;
-    }
-    .input-wrapper {
-      flex-direction: column;
-    }
-  }
-  
-  @media only screen and (max-width: 1200px) {
-    .signup-container {
-      grid-column: 1 / 3;
-    }
-    .welcome-container {
-      display: none;
-    }
-  }
-  
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  max-width: 400px;
+  margin: 50px auto;
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0.188em 1.55em rgb(156, 156, 156);
+  border-radius: 5px;
+  padding: 20px;
+  box-sizing: border-box;
+  gap: 0.1rem;
+}
+
+.signup-label {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 5px;
+  margin-top: 2px;
+  align-self: flex-start;
+  font-weight: bold;
+}
+
+.signup-input {
+  border: black;
+  font-size: 1.8rem;
+  padding: 1rem;
+  border: none;
+  border-radius: 20px;
+  background: #eee;
+  font-weight: 600;
+  width: 100%;
+}
+
+.signup-input:focus {
+  outline-color: rgb(32, 177, 255);
+}
+
+.signup-input.error {
+  background-color: #ffcccc;
+  border: 1px solid #cc0000;
+}
+
+.signup-error {
+  font-size: 14px;
+  font-weight: bold;
+  color: #cc0000;
+  margin-top: 5px;
+  align-self: flex-start;
+}
+
+.signup-button {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  background: linear-gradient(to bottom, #0077cc, #005daa);
+  border: 0;
+  border-radius: 20px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.signup-button:hover {
+  background: linear-gradient(to bottom, #005daa, #004a80);
+}
+
+@media (max-width: 600px) {
   .signup-form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 80%;
-      max-width: 400px;
-      margin: 50px auto;
-      border: 1px solid #ccc;
-      box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-      border-radius: 5px;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    
-    .signup-label {
-      font-size: 16px;
-      color: #333;
-      margin-bottom: 2px;
-      margin-top: 2px;
-      align-self: flex-start;
-      font-weight: bold;
-    }
-    
-    .signup-input {
-      border: black;
-    font-size: 1.8rem;
-    padding: 3rem 5rem 1rem 2rem;
-    border: none;
-    border-radius: 2rem;
-    background: #eee;
-    font-weight: 600;
-    width: 100%;
-    }
-  
-    .signup-input:focus{
-      outline-color: rgb(32, 177, 255);
-    }
-  
-    .signup-input.error {
-      background-color: #ffcccc;
-      border: 1px solid #cc0000;
-      }
-  
-      .signup-error {
-      font-family: 'Roboto', sans-serif;
-      font-size: 14px;
-      font-weight: bold;
-      color: #cc0000;
-      margin-top: 5px;
-      align-self: flex-start;    
-      }
-  
-      .signup-button {
-        width: 100%;
-        height: 40px;
-        margin-top: 20px;
-        background: linear-gradient(to bottom, #0077cc, #005daa);
-        border: 0;
-        border-radius: 5px;
-        color: white;
-        font-size: 16px;
-        cursor: pointer;
-      }
-  
-      .signup-button:hover {
-      background: linear-gradient(to bottom, #005daa, #004a80);
-      }
-  
-      @media (max-width: 600px) {
-      .signup-form {
-          width: 90%;
-      }
+    width: 90%;
   }
+}
