--- a/src/pages/Upgrade/Upgrade.css
+++ b/src/pages/Upgrade/Upgrade.css
@@ -1,349 +1,179 @@
-.aboutContainer {
-    display: flex;
-    width: 90%;
-    margin: auto;
-    justify-content: space-between;
+body {
+  color: #1a1a1a;
+  font-size: 10px;
+}
+
+a {
+  color: #2196f3;
+  text-decoration: none;
+}
+
+.Up-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.1rem;
+}
+
+.Upheading-primary {
+  font-size: 3rem;
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.Up-error {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #cc0000;
+  margin-top: 8px;
+}
+
+.Up-button {
+  width: 100%;
+  height: 64px;
+  border: none;
+  background: #2196f3;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 1.6rem;
+  margin-top: 24px;
+  box-shadow: 0 3px 20px rgb(156, 156, 156);
+}
+
+.Up-button:active {
+  box-shadow: none;
+}
+
+.Up-button:hover {
+  background: #2180f9;
+}
+
+.inp {
+  position: relative;
+}
+
+.label {
+  pointer-events: none;
+  position: absolute;
+  color: #00000070;
+  font-weight: 500;
+  transition: all 0.2s;
+  transform-origin: left;
+}
+
+@media only screen and (max-width: 70rem) {
+  html {
+    font-size: 54.5%;
+  }
+}
+
+@media only screen and (max-width: 60rem) {
+  .Up-container {
+    padding: 5rem;
+  }
+}
+@media only screen and (max-width: 40rem) {
+  html {
+    font-size: 48.5%;
   }
 
-  .aboutMobileContainer{
-    display: none;
+  .input-text:not(:placeholder-shown) + .label,
+  .input-text:focus + .label {
+    top: 0.6rem;
+    transform: scale(0.75);
   }
-
-  .about-left {
-    width: 50%;
-    color: #001837;
-    margin-top: 4rem;
+  .label {
+    font-size: 1.9rem;
   }
-
-  .about-mainHead {
-    font-size: 4rem;
-    margin: 0;
-    /* width: 80%; */
-  }
-  .about-subHead {
-    font-size: 16px;
-    font-weight: 700;
-  }
-
-  .about-Content {
-    font-size: 25px;
-    color: #707070;
-    width: 80%;
-    /* line-height: 2rem; */
-  }
-
-  .about-right {
-    width: 50%;
-    /* border: 1px solid red; */
-    position: relative;
-  }
-
-  .detail-container {
-    border-radius: 5px;
-    position: absolute;
-    bottom: -20%;
-    /* bottom: 0%; */
-    width: 80%;
-    left: 10%;
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    /* display: flex; */
-    /* flex-direction: column; */
-  }
-
-  .detail-container div {
-    display: flex;
+  .input-wrapper {
     flex-direction: column;
-    margin: 1rem;
   }
+}
 
-  .detail-info {
-    font-size: 1.2rem;
-    font-weight: 700;
-    padding: 0.5rem;
+@media only screen and (max-width: 1200px) {
+  .Up-container {
+    grid-column: 1 / 3;
   }
+}
 
-  .input {
-    padding: 20px 30px;
-    border-radius: 5px;
-    background-color: #f7f7f7;
-    border: 1px solid rgb(235, 235, 235);
-    outline: none;
-    font-size: 18px;
-  }
+.Up-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  max-width: 400px;
+  margin: 1px auto;
+  border: 1px solid #ccc;
+  box-shadow: 0 0.188em 1.55em rgb(156, 156, 156);
+  border-radius: 5px;
+  padding: 20px;
+  box-sizing: border-box;
+  gap: 0.1rem;
+}
 
-  .detailHeading {
-    text-align: center;
-    font-size: 1.5rem;
-  }
+.Up-label {
+  font-size: 16px;
+  color: #333;
+  margin-top: 2px;
+  align-self: flex-start;
+  font-weight: bold;
+}
 
-  .detailBtn button {
-    background-color: #738ff8;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: bold;
-    margin: 2rem 0;
-    cursor: pointer;
-  }
+.Up-input {
+  border: black;
+  font-size: 1.8rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 2rem;
+  background: #eee;
+  font-weight: 600;
+  width: 100%;
+}
 
+.Up-input:focus {
+  outline-color: rgb(32, 177, 255);
+}
 
-  @media screen and (max-width: 3000px) {
+.Up-input.error {
+  background-color: #ffcccc;
+  border: 1px solid #cc0000;
+}
 
+.Up-error {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  color: #cc0000;
+  margin-top: 5px;
+  align-self: flex-start;
+}
 
-    .about-left {
-        margin-top: 4rem;
-      }
+.Up-button {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  background: linear-gradient(to bottom, #0077cc, #005daa);
+  border: 0;
+  border-radius: 22px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
 
-      .about-mainHead {
-        font-size: 2.2rem;
-      }
-      .about-subHead {
-        font-size: 12px;
-      }
+.Up-button:hover {
+  background: linear-gradient(to bottom, #005daa, #004a80);
+}
 
-      .about-Content {
-        font-size: 1.2rem;
-      }
-
-
-
-
-  @media screen and (max-width: 3070px) {
-
-
-      .about-left {
-          margin-top: 4rem;
-        }
-
-        .about-mainHead {
-          font-size: 2.2rem;
-        }
-        .about-subHead {
-          font-size: 12px;
-        }
-
-        .about-Content {
-          font-size: 1.2rem;
-        }
-
-        .detail-container {
-          top: -80%;
-          width: 90%;
-          left: 10%;
-        }
-
-        .detail-container div {
-          margin: 0.4rem 0.5rem;
-        }
-
-        .detail-info {
-          font-size: 16px;
-          font-weight: 600;
-          padding: 0.4rem;
-        }
-
-        .input {
-          padding: 10px 25px;
-          font-size: 14px;
-          padding-left: 0.5rem;
-        }
-
-        .detailHeading {
-          text-align: center;
-          font-size: 1rem;
-        }
-
-        .detailBtn button {
-          padding:10px 25px;
-          font-size: 14px;
-
-        }
-  }
-
-  @media screen and (max-width: 1024px) {
-    .about-left {
-      margin-top: 2rem;
-    }
-
-    .about-mainHead {
-      font-size: 2.2rem;
-    }
-    .about-subHead {
-      font-size: 12px;
-    }
-
-    .about-Content {
-      font-size: 1.2rem;
-    }
-
-    .detail-container {
-      top: -80%;
-      width: 90%;
-      left: 10%;
-    }
-
-    .detail-container div {
-      margin: 0.4rem 0.5rem;
-    }
-
-    .detail-info {
-      font-size: 16px;
-      font-weight: 600;
-      padding: 0.4rem;
-    }
-
-    .input {
-      padding: 10px 25px;
-      font-size: 14px;
-      padding-left: 0.5rem;
-    }
-
-    .detailHeading {
-      text-align: center;
-      font-size: 1rem;
-    }
-
-    .detailBtn button {
-      padding: 10px 25px;
-      font-size: 14px;
-    }
-  }
-  @media screen and (max-width: 768px) {
-    .about-left {
-      margin-top: 2rem;
-    }
-
-    .about-mainHead {
-      font-size: 2rem;
-    }
-    .about-subHead {
-      font-size: 10px;
-    }
-
-    .about-Content {
-      font-size: 1rem;
-    }
-
-    .detail-container {
-      top: -80%;
-      width: 90%;
-      left: 10%;
-    }
-
-    .detail-container div {
-      margin: 0.4rem 0.5rem;
-    }
-
-    .detail-info {
-      font-size: 14px;
-      font-weight: 600;
-      padding: 0.4rem;
-    }
-
-    .input {
-      padding: 10px 25px;
-      font-size: 14px;
-      padding-left: 0.5rem;
-    }
-
-    .detailHeading {
-      text-align: center;
-      font-size: 1rem;
-    }
-
-    .detailBtn button {
-      padding: 10px 25px;
-      font-size: 14px;
-    }
-  }
-
-
-
-  @media screen and (max-width: 425px) {
-    .aboutContainer{
-      display: none;
-    }
-    .aboutMobileContainer{
-      display: block;
-      width: 90%;
-      margin: auto;
-      margin-top: 4rem;
-    }
-
-
-  .about-Top {
-    color: #001837;
-    margin-top: 2rem;
-  }
-
-  .aboutTop-mainHead {
-    font-size: 2.3rem;
-    margin: 0;
-    /* width: 80%; */
-  }
-  .aboutTop-subHead {
-    font-size: 1rem;
-    font-weight: 700;
-  }
-
-  .aboutTop-Content {
-    font-size: 1.2rem;
-    color: #707070;
-    width: 100%;
-    /* line-height: 2rem; */
-  }
-  
-
-  .aboutDetail-container{
+@media (max-width: 600px) {
+  .Up-form {
     width: 90%;
-    margin: auto;
   }
-
-  .aboutDetail-container div {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
-  }
-
-
-  .aboutDetail-info {
-    font-size: 1.2rem;
-    font-weight: 700;
-    padding: 0.5rem;
-  }
-
-  .aboutDetail-input {
-    padding: 10px 15px;
-    border-radius: 5px;
-    background-color: #f7f7f7;
-    border: 1px solid rgb(235, 235, 235);
-    outline: none;
-    font-size: 18px;
-  }
-
-  .aboutDetailHeading {
-    text-align: center;
-    font-size: 1.5rem;
-  }
-
-  .aboutDetail-detailBtn button {
-    background-color: #738ff8;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: bold;
-    margin: 2rem 0;
-    cursor: pointer;
-  }
-}}
+}
