feat: header and footer UI improvemnt

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -37,7 +37,9 @@ section {
 
 .footer-distributed h3 {
   color: #ffffff;
-  font: normal 36px "Open Sans", cursive;
+  font:
+    normal 36px "Open Sans",
+    cursive;
   margin: 0;
 }
 
